// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag can be controlled by visible 1`] = `
<div
  class="fishd-tag fishd-tag-zoom-appear"
  data-show="true"
/>
`;

exports[`Tag can be controlled by visible 2`] = `null`;

exports[`Tag can be controlled by visible 3`] = `
<div
  class="fishd-tag"
  data-show="true"
/>
`;
